src/objects/Installed_System__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Installed_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>April_Daily_Peak_Sun_Hours__c</fullName>
        <label>April Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Guarantee__c</fullName>
        <label>April Guarantee</label>
        <summarizedField>Annual_Production__c.April_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>April_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>April_Daily_Peak_Sun_Hours__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>April_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>April_Solar_Access__c</fullName>
        <label>April Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>August_Daily_Peak_Sun_Hours__c</fullName>
        <label>August Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>August_Daily_Peak_Sun_Hours__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>August Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>August_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>August Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>August_Solar_Access__c</fullName>
        <label>August Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CEG_expected_IRR__c</fullName>
        <description>LEASE ONLY - CEG expected IRR (%)</description>
        <inlineHelpText>LEASE ONLY - CEG expected IRR (%)</inlineHelpText>
        <label>CEG expected IRR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Certification_Number_DC__c</fullName>
        <description>PJM Certification Number - DC</description>
        <inlineHelpText>PJM Certification Number - DC</inlineHelpText>
        <label>Certification Number - DC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_DE__c</fullName>
        <description>PJM Certification Number - DE</description>
        <inlineHelpText>PJM Certification Number - DE</inlineHelpText>
        <label>Certification Number - DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_IL__c</fullName>
        <description>PJM Certification Number - IL</description>
        <inlineHelpText>PJM Certification Number - IL</inlineHelpText>
        <label>Certification Number - IL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_MA__c</fullName>
        <description>PJM Certification Number - MA</description>
        <inlineHelpText>PJM Certification Number - MA</inlineHelpText>
        <label>Certification Number - MA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_MD__c</fullName>
        <description>PJM Certification Number - MD</description>
        <externalId>true</externalId>
        <inlineHelpText>PJM Certification Number - MD</inlineHelpText>
        <label>Certification Number - MD</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certification_Number_NJ__c</fullName>
        <description>PJM Certification Number - NJ</description>
        <inlineHelpText>PJM Certification Number - NJ</inlineHelpText>
        <label>Certification Number - NJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_OH__c</fullName>
        <description>PJM Certification Number - OH</description>
        <inlineHelpText>PJM Certification Number - OH</inlineHelpText>
        <label>Certification Number - OH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Number_PA__c</fullName>
        <description>PJM Certification Number - PA</description>
        <inlineHelpText>PJM Certification Number - PA</inlineHelpText>
        <label>Certification Number - PA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Down_Payment__c</fullName>
        <description>LEASE ONLY - Customer Down Payment ($)</description>
        <inlineHelpText>LEASE ONLY - Customer Down Payment ($)</inlineHelpText>
        <label>Customer Down Payment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Monthly_Payment__c</fullName>
        <description>LEASE ONLY - Customer Monthly Payment ($)</description>
        <inlineHelpText>LEASE ONLY - Customer Monthly Payment ($)</inlineHelpText>
        <label>Customer Monthly Payment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Monthy_Payment_Escalator__c</fullName>
        <description>LEASE ONLY - Customer Monthy Payment Escalator (%)</description>
        <inlineHelpText>LEASE ONLY - Customer Monthy Payment Escalator (%)</inlineHelpText>
        <label>Customer Monthy Payment Escalator (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Online__c</fullName>
        <description>Month in which the system is authorized to produce electricity</description>
        <inlineHelpText>Month in which the system is authorized to produce electricity</inlineHelpText>
        <label>Date Online</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>December_Daily_Peak_Sun_Hours__c</fullName>
        <label>December Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>December_Daily_Peak_Sun_Hours__c *31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>December Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>December_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>December Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>December_Solar_Access__c</fullName>
        <label>December Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dont_Use_Enphase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Use Enphase Production Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enphase_ID__c</fullName>
        <externalId>true</externalId>
        <label>Enphase ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Estimated_Annual_SRECs_Generated__c</fullName>
        <formula>FLOOR (Sales_Order__r.System_Design_Quote__r.System_Design__r.Total_Projected_Annual_Output_kWh_y__c / 1000)</formula>
        <label>Estimated Annual SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMV_System_Total__c</fullName>
        <description>LEASE ONLY - Total System FMV ($)</description>
        <formula>FMV_W__c * System_Size_kW__c *1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEASE ONLY - Total System FMV ($)</inlineHelpText>
        <label>FMV System Total ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMV_W__c</fullName>
        <description>LEASE ONLY - Fair Market Value Per Watt</description>
        <inlineHelpText>LEASE ONLY - Fair Market Value Per Watt</inlineHelpText>
        <label>Fair Market Value (FMV) ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>February_Daily_Peak_Sun_Hours__c</fullName>
        <label>February Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Guarantee__c</fullName>
        <label>February Guarantee</label>
        <summarizedField>Annual_Production__c.February_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>February_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>(IF( MOD( YEAR(TODAY()), 4) = 0, 29, 28)) *  February_Daily_Peak_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>February Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>(February_Daily_Peak_Sun_Hours__c  / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>February Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>February_Solar_Access__c</fullName>
        <label>February Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GATS_GIS_Facility_Name_1__c</fullName>
        <description>Facility Name 1 in GATS/GIS</description>
        <inlineHelpText>Facility Name 1 in GATS/GIS</inlineHelpText>
        <label>GATS/GIS Facility Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATS_GIS_Facility_Name_2__c</fullName>
        <description>Facility Name 2 in GATS/GIS</description>
        <inlineHelpText>Facility Name 2 in GATS/GIS</inlineHelpText>
        <label>GATS/GIS Facility Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATS_GIS_Owner_Name__c</fullName>
        <description>GATS/GIS Owner Name</description>
        <inlineHelpText>GATS/GIS Owner Name</inlineHelpText>
        <label>GATS/GIS Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Id__c</fullName>
        <description>GIS System ID</description>
        <inlineHelpText>GIS System ID</inlineHelpText>
        <label>GIS Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation_Entry_Type__c</fullName>
        <description>Generation Entry Type (Actual, Meter Reading, Production Estimate)</description>
        <inlineHelpText>Generation Entry Type (Actual, Meter Reading, Production Estimate)</inlineHelpText>
        <label>Generation Entry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Est</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generation_Start_Date__c</fullName>
        <label>Generation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generator_Status__c</fullName>
        <description>Generator Status (Active, Need Info, Pending, Rejected)</description>
        <inlineHelpText>Generator Status (Active, Need Info, Pending, Rejected)</inlineHelpText>
        <label>Generator Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Address_1__c</fullName>
        <description>Property Address 1</description>
        <formula>Property__r.Name</formula>
        <inlineHelpText>Property Address 1</inlineHelpText>
        <label>Installation Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Address_2__c</fullName>
        <description>Property Address 2</description>
        <formula>Property__r.Property_Address_2__c</formula>
        <inlineHelpText>Property Address 2</inlineHelpText>
        <label>Installation Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_City__c</fullName>
        <description>Property City</description>
        <formula>Property__r.Property_City__c</formula>
        <inlineHelpText>Property City</inlineHelpText>
        <label>Installation City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_County__c</fullName>
        <description>Property County</description>
        <formula>Property__r.QAS_Property_County__c</formula>
        <inlineHelpText>Property County</inlineHelpText>
        <label>Installation County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <formula>Project__r.Installation_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_State__c</fullName>
        <description>Property State</description>
        <formula>TEXT(Property__r.Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Property State</inlineHelpText>
        <label>Installation State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Year__c</fullName>
        <formula>YEAR( Generation_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Zip_Code__c</fullName>
        <description>Property Zip Code</description>
        <formula>Property__r.Property_ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Property Zip Code</inlineHelpText>
        <label>Installation Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Date__c</fullName>
        <label>Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>January_Daily_Peak_Sun_Hours__c</fullName>
        <label>January Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>January_Daily_Peak_Sun_Hours__c  * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>January Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>(January_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>January Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>January_Solar_Access__c</fullName>
        <label>January Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>July_Daily_Peak_Sun_Hours__c</fullName>
        <label>July Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Guarantee__c</fullName>
        <label>July Guarantee</label>
        <summarizedField>Annual_Production__c.July_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>July_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>July_Daily_Peak_Sun_Hours__c *31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>July Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>July_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>July Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>July_Solar_Access__c</fullName>
        <label>July Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>June_Daily_Peak_Sun_Hours__c</fullName>
        <label>June Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Guarantee__c</fullName>
        <label>June Guarantee</label>
        <summarizedField>Annual_Production__c.June_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>June_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>June_Daily_Peak_Sun_Hours__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>June_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>June_Solar_Access__c</fullName>
        <label>June Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Financing_Type__c</fullName>
        <formula>CASE(Sales_Order__r.Financing_Type__c , &quot;Lease&quot;, Sales_Order__r.Leasing_Option__c , 
&quot;Purchase&quot;,  Sales_Order__r.Financing_Option__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease/Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <formula>TEXT(Sales_Order__r.Lease_Fund__c)</formula>
        <label>Lease Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Purchase__c</fullName>
        <formula>Sales_Order__r.Financing_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease/Purchase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <description>LEASE ONLY - Upfront or Monthly</description>
        <formula>Sales_Order__r.Leasing_Option__c</formula>
        <inlineHelpText>LEASE ONLY - Upfront or Monthly</inlineHelpText>
        <label>Lease Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>March_Daily_Peak_Sun_Hours__c</fullName>
        <label>March Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Guarantee__c</fullName>
        <label>March Guarantee</label>
        <summarizedField>Annual_Production__c.March_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>March_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>March_Daily_Peak_Sun_Hours__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>March Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>March_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>( March_Daily_Peak_Sun_Hours__c  / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>March Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>March_Solar_Access__c</fullName>
        <label>March Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May_Daily_Peak_Sun_Hours__c</fullName>
        <label>May Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Guarantee__c</fullName>
        <label>May Guarantee</label>
        <summarizedField>Annual_Production__c.May_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>May_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>May_Daily_Peak_Sun_Hours__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>May_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May_Solar_Access__c</fullName>
        <label>May Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Apr__c</fullName>
        <label>Monthly Production Factor Apr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Aug__c</fullName>
        <label>Monthly Production Factor Aug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Dec__c</fullName>
        <label>Monthly Production Factor Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Feb__c</fullName>
        <description>Monthly Production Factor Feb</description>
        <label>Monthly Production Factor Feb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Jan__c</fullName>
        <description>Monthly Production Factor Jan</description>
        <label>Monthly Production Factor Jan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Jul__c</fullName>
        <label>Monthly Production Factor Jul</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Jun__c</fullName>
        <label>Monthly Production Factor Jun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Mar__c</fullName>
        <label>Monthly Production Factor Mar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_May__c</fullName>
        <label>Monthly Production Factor May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Nov__c</fullName>
        <label>Monthly Production Factor Nov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Oct__c</fullName>
        <label>Monthly Production Factor Oct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Production_Factor_Sep__c</fullName>
        <label>Monthly Production Factor Sep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nameplate_Capacity_MW__c</fullName>
        <description>System Size in MW</description>
        <inlineHelpText>System Size in MW</inlineHelpText>
        <label>Nameplate Capacity (MW)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Daily_Peak_Sun_Hours__c</fullName>
        <label>November Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>November_Daily_Peak_Sun_Hours__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>November Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>November_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>November_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>November Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>November_Solar_Access__c</fullName>
        <label>November Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <formula>Sales_Order__r.Total_Panel_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Daily_Peak_Sun_Hours__c</fullName>
        <label>October Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>